--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "setup": "yarn",
+    "dev": "NODE_ENV=development next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "prettier --write .",
+    "prod": "next build && next start",
+    "update": "yarn upgrade-interactive"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.2",
@@ -29,7 +33,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "prisma": "4.0.0",
     "tailwindcss": "^3.1.6",
     "ts-node": "^10.8.2",
