--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "next lint",
     "clean": "prettier --write .",
     "prod": "next build && next start",
-    "update": "yarn upgrade-interactive"
+    "update": "yarn upgrade-interactive",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.4",
+    "@next/bundle-analyzer": "^12.2.5",
     "@prisma/client": "4.2.1",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "cross-env": "^7.0.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
