--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "setup": "yarn",
     "dev": "NODE_ENV=development next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "clean": "prettier --write .",
@@ -23,6 +24,7 @@
     "@trpc/server": "^9.27.2",
     "cross-env": "^7.0.3",
     "next": "12.2.5",
+    "next-sitemap": "^3.1.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
